# ferroload

./: .gitignore  API_REVIEW.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  EXAMPLES.md  PERF_REVIEW.md  PYTHON_API.md  README.md  RELEASING.md  USAGE.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml  release.yml
benchmarks/: .gitignore  DECODE_OPTIMIZATION.md  README.md  REPORT.md  acquire.py  bench_one.py  build.py  common.py  formats.py  loaders.py  make_charts.py  run_all.py  streaming_gcs.py
benchmarks/results/: apples_to_apples_nw8.json  cifar10.json  ffhq256.json  stanford_cars.json  streaming_gcs.json
crates/ferroload-codec/: Cargo.toml
crates/ferroload-codec/src/: audio_wav.rs  image_codec.rs  lib.rs  sampling.rs  tensor.rs  video.rs
crates/ferroload-core/: Cargo.toml
crates/ferroload-core/examples/: gcs_ls.rs  gcs_probe.rs  gcs_profile.rs  gcs_put_dir.rs  synthetic_av.rs
crates/ferroload-core/src/: dataset.rs  error.rs  index.rs  index_parquet.rs  lib.rs  manifest.rs  sampler.rs  shard.rs  sideindex.rs  subset.rs
crates/ferroload-core/tests/: combinations.rs  integration.rs  layers.rs  remote.rs
crates/ferroload-io/: Cargo.toml
crates/ferroload-io/src/: cache.rs  lib.rs
crates/ferroload-py/: Cargo.toml  README.md  pyproject.toml
crates/ferroload-py/python/ferroload/: __init__.py  cli.py  dataset.py  executor.py  loader.py
crates/ferroload-py/src/: lib.rs
docs/: benchmarks.md  changelog.md  index.md  installation.md
docs/python/: api.md  quickstart.md
docs/rust/: examples.md  usage.md
notebooks/: ferroload_demo.ipynb
python/: README_HF.md  bench_read.py  ferroload_cli.py  ferroload_loader.py  import_hf.py  import_hf_files.py  test_combinations.py  test_map.py  test_sampler_prefetch.py  test_video.py
scripts/: build-package.sh  finalize-docs.sh
