[workspace]
resolver = "2"
members = [
    "crates/ferroload-core",
    "crates/ferroload-io",
    "crates/ferroload-codec",
]
# ferroload-py is built separately (cdylib against system libpython); see its README.
exclude = ["crates/ferroload-py"]

[workspace.package]
version = "0.13.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
