[package]
name = "ferroload-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Modality decoders for Ferroload: image (pure-Rust), audio WAV (pure-Rust), video (ffmpeg/NVDEC, feature-gated)."

[features]
default = ["image-codec", "audio-codec"]
image-codec = ["dep:image", "dep:fast_image_resize"]
audio-codec = []                        # pure-Rust WAV PCM, no extra deps
# Decode JPEG via libjpeg-turbo (SIMD C) instead of the pure-Rust zune-jpeg
# backend the `image` crate uses — faster per-core JPEG decode. Needs a system
# libjpeg-turbo (link via pkg-config / TURBOJPEG_SOURCE). Off by default to keep
# the build pure-Rust + portable.
turbojpeg = ["dep:turbojpeg", "image-codec"]
# Video decode links system ffmpeg (libav) / NVDEC and needs clang+pkg-config;
# not buildable in every environment, so it is strictly opt-in.
video-ffmpeg = ["dep:ffmpeg-next"]
video-nvdec = ["video-ffmpeg"]

[dependencies]
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
# SIMD (AVX2 + NEON) resize — ~7-23x faster than image::imageops, cross-platform.
fast_image_resize = { version = "5", optional = true }
turbojpeg = { version = "1", optional = true }
ffmpeg-next = { version = "7", optional = true }
