[package]
name = "ferroload-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust format core for the Ferroload multimodal dataset format: manifest, tar shards + side-index, index, versioning, extensions."

[features]
default = []
# Remote (object-store) datasets: `Dataset::open_url("s3://…")` streams shards via
# ranged GETs through a local cache. `remote` pulls the io layer + async Parquet
# reading (column-range/row-group reads of the index over the network); the
# per-cloud features add the matching backend (TLS/HTTP stack).
remote = ["dep:ferroload-io", "dep:futures", "parquet/async"]
aws = ["remote", "ferroload-io/aws"]
gcp = ["remote", "ferroload-io/gcp"]
azure = ["remote", "ferroload-io/azure"]
# Build every cloud backend at once.
cloud = ["aws", "gcp", "azure"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# The index is a directory of Parquet shards (queryable by DuckDB/Arrow/DataFusion);
# arrow + parquet are core, not optional.
arrow = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow", "zstd"] }
bytes = "1"
futures = { version = "0.3", optional = true }
ferroload-io = { path = "../ferroload-io", optional = true }
